2006-01-05  Vincent van Adrighem  <adrighem@gnome.org>

	* modules.xml: Reordered modules (Alphabet), placing
	    generic stuff like tour and press-release first.
	    Added: gedit, gnome-control-center, gnome-keyring-manager.
	    Branch-change: evince, gnomemeeting, zenity.

2006-01-04  Vincent van Adrighem  <adrighem@gnome.org>

	* modules.xml: Changed epiphany branch from gnome-2-12 to HEAD.

2005-09-07  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add gnome-schedule.

2005-09-03  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added press-release.

2005-08-20  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added gucharmap.

2005-08-19  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add release-notes.

2005-08-18  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py (read_makefile_variable): Support "include" files.

2005-08-18  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add gnome-netstatus.

2005-08-05  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added file-roller.

2005-08-04  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add fast-user-switch-applet.

2005-08-03  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add gnomemeeting (opal branch).

2005-08-02  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added gdm2.

2005-07-29  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py (stats_as_html): Improve rendering.

2005-07-27  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added zenity, sound-juicer.

2005-07-24  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added applets, evince.

2005-07-20  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add more modules.

2005-07-19  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py: Clean-ups and fixes.

2005-07-18  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add panel-clock-applet, panel-fish-applet,
	panel-window-list-applet, panel-workspace-switcher-applet. 

	* doc-l10n-status.py (stats_as_html): Move <hr>.

2005-07-18  Danilo Šegan  <danilo@gnome.org>
