@@ -149,6 +149,31 @@
     <cvs-directory>gnome-schedule/help</cvs-directory>
   </module>
 
+  <module id="gnome-system-tools-boot">
+    <cvs-directory>gnome-ssystem-tools/doc/boot</cvs-directory>
+    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
+  <module id="gnome-system-tools-network">
+    <cvs-directory>gnome-ssystem-tools/doc/network</cvs-directory>
+    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
+  <module id="gnome-system-tools-services">
+    <cvs-directory>gnome-ssystem-tools/doc/services</cvs-directory>
+    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
+  <module id="gnome-system-tools-time">
+    <cvs-directory>gnome-ssystem-tools/doc/time</cvs-directory>
+    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
+  <module id="gnome-system-tools-users">
+    <cvs-directory>gnome-ssystem-tools/doc/users</cvs-directory>
+    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
   <module id="gucharmap">
     <cvs-directory>gucharmap/help</cvs-directory>
   </module>
