@@ -1,3 +1,7 @@
+2006-01-06  Vincent Untz  <vuntz@gnome.org>
+
+	* modules.xml: add gnome-system-tools
+
 2006-01-05  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* modules.xml: Reordered modules (Alphabet), placing
